ghc-4335c07/testsuite/tests/partial-sigs/should_fail/T10615.hs
{-# LANGUAGE RankNTypes #-}
module T10615 where

f1 :: _ -> f
f1 = const

f2 :: _ -> _f
f2 = const


